--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -44,8 +44,7 @@
     <!-- Regex array of allowable upstream ifaces for tethering - for example if you want
          tethering on a new interface called "foo2" add <item>"foo\\d"</item> to the array -->
     <string-array translatable="false" name="config_tether_upstream_regexs">
-        <item>"pdp\\d"</item>
-        <item>"rmnet\\d"</item>
+        <item>"ppp\\d"</item>
         <item>"wlan\\d"</item>
     </string-array>
 
@@ -59,15 +58,12 @@
     <!-- Boolean indicating if we require the use of DUN on mobile for tethering -->
     <bool translatable="false" name="config_tether_dun_required">false</bool>
 
-    <!-- Enables swipe versus poly-finger touch disambiguation in the KeyboardView -->
-    <bool name="config_swipeDisambiguation">false</bool>
-
     <!-- Specifies the amount of time to disable virtual keys after the screen is touched
          in order to filter out accidental virtual key presses due to swiping gestures
          or taps near the edge of the display.  May be 0 to disable the feature.
          It is recommended that this value be no more than 250 ms.
          This feature should be disabled for most devices. -->
-    <integer name="config_virtualKeyQuietTimeMillis">100</integer>
+    <integer name="config_virtualKeyQuietTimeMillis">200</integer>
 
     <!-- Allow the menu hard key to be disabled in LockScreen on some devices -->
     <bool name="config_disableMenuKeyInLockScreen">true</bool>
