--- a/overlay/packages/apps/Camera/res/values/config.xml
+++ b/overlay/packages/apps/Camera/res/values/config.xml
@@ -26,6 +26,5 @@
 
 	<!-- FFC parameter filtering -->
 	<bool name="ffc_canFocus">false</bool>
-	<bool name="ffc_canZoom">false</bool>
-	<string name="ffc_supportedEffects"></string>
+	<bool name="ffc_canZoom">true</bool>
 </resources>
