Fix lense lockscreen text alignment

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -75,6 +75,9 @@
     <!-- Configure rotary bottom margin -->
     <integer name="config_rotaryMarginBottomDIP">10</integer>
 
+    <!-- Configure lense unlock time label offset -->
+    <integer name="config_lenseTimeLabelOffsetDIP">30</integer>
+
     <!-- Component name of the service providing network location support. -->
     <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
 
