--- a/overlay/packages/apps/Trebuchet/res/values/config.xml
+++ b/overlay/packages/apps/Trebuchet/res/values/config.xml
@@ -1,6 +1,6 @@
 <resources>
-    <bool name="config_hardwareAccelerated">false</bool>
+    <bool name="config_hardwareAccelerated">true</bool>
     <bool name="config_cyanogenmod">true</bool>
     <integer name="config_workspaceRows">3</integer> 
-    <integer name="config_workspaceColumns">3</integer>
+    <integer name="config_workspaceColumns">4</integer>
 </resources>
