Swap volume control key controls based on orientation
Note: this patch is not yet present in CM7, so the resource is
added to the framework via an add-resource tag to prevent build
failures.

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -125,4 +125,10 @@
 
     <!-- Configure lense unlock time label offset -->
     <integer name="config_lenseTimeLabelOffsetDIP">40</integer>
+
+    <!-- The orientation in which case volume keys should be swapped.
+         See ROTATION_0, ROTATION_90, ROTATION_180, ROTATION_270 in android.view.Surface
+         for more details about values -->
+    <add-resource type="integer" name="swap_volume_keys_orientation"></add-resource>
+    <integer name="swap_volume_keys_orientation">1</integer>
 </resources>
